fixing text align to be centered

--- a/frontend/src/components/day-activities/DayActivitiesTop.css
+++ b/frontend/src/components/day-activities/DayActivitiesTop.css
@@ -7,6 +7,7 @@
 .location-header {
     margin: 0;
     font-weight: 400;
+    text-align: center;
 }
 
 .back-button {
